<resources>
    <string name="app_name">Gerenciamento de treino</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_it_email">Digite seu email</string>
    <string name="type_it_password">Digite sua senha</string>
    <string name="make_login">Fazer login</string>
    <string name="register">Registre-se</string>
    <string name="register_name">Digite seu nome</string>
    <string name="register_login">Digite sem email</string>
    <string name="register_create_password">Digite sua senha</string>
    <string name="confirm_password">Confirme sua senha</string>
    <string name="btn_register">Registrar-se</string>
    <string name="empty_fild">Por favor, preencha todos os campos</string>
    <string name="password_lenght">Sua senha deve ter no mínimo 6 caracters</string>
    <string name="password_not_confirm">Senha não confirmada</string>
    <string name="login_existing">Este login já está sendo utilizado</string>
    <string name="login_success">Login feito com sucesso</string>
    <string name="register_not_success">Registro não realizado</string>
    <string name="email_already">Já existe um e-mail cadastrado em nosso sistema que corresponde a esse, por favor, faça o login ou click em esqueci a senha</string>
    <string name="register_success">Registro feito com sucesso</string>
    <string name="login_incomplete">Login não realizado</string>
    <string name="email_or_password_invald">Email ou senha inválido</string>
    <string name="not_internet">Você está sem conexão com a internet</string>
    <string name="email_existing">Este email já está sendo utilizado</string>
    <string name="training_empty">Este treino ainda não possui nenhum exercício</string>
    <string name="training">TREINO </string>
    <string name="description">Descrição: </string>
    <string name="add_training">Adicionar treino</string>
    <string name="create_training">Criar treino</string>
    <string name="name">Nome: </string>
    <string name="example">Exemplo: Bíceps e Costas</string>
    <string name="edti_training">Editar Treino</string>
    <string name="name_day">Treino de %s</string>
    <string name="login_not_realized">Não foi possível realizar seu login</string>
    <string name="training_created_success">Treino criado com sucesso</string>
    <string name="error_default">falha ao criar treino</string>
    <string name="error_default_edit">falha ao editar treino</string>
    <string name="error_default_exercise">falha ao editar exercicio</string>
    <string name="error_default_crate_exercise">falha ao criar exercicio</string>
    <string name="set_name_training">Digite o nome do treino</string>
    <string name="set_description_training">Digite a descrição do treino</string>
    <string name="training_edit_success">Treino editado com sucesso</string>
    <string name="atention">Atenção</string>
    <string name="delete_training_message">Tem certeza que deseja excluir este treino?</string>
    <string name="yes">Sim</string>
    <string name="not">Não</string>
    <string name="training_delete_success">Treino excluído com sucesso</string>
    <string name="add_photo">Adicionar foto</string>
    <string name="exercise">Exercício</string>
    <string name="tv_add_exercise">Adicionar exercicio</string>
    <string name="edt_note">"Observações: "</string>
    <string name="set_note_exercise">Digite observações sobre o treino</string>
    <string name="empty_image">Por favor, insira uma imagem do exercício</string>
    <string name="exercise_add_success">Exercício adicionado com sucesso</string>
    <string name="exercise_edited_success">Exercício editado com sucesso</string>
    <string name="create_exercise">Criar Exercício</string>
    <string name="edit_exercise">Editar Exercício</string>
    <string name="exercise_deleted_success">Exercicio deletado com sucesso</string>
    <string name="home">Home</string>
    <string name="choose_photo_using">Escolha a foto</string>
    <string name="action_close">Sair</string>
    <string name="camera">Usar a camera</string>
    <string name="gallery">Acessar a galeria</string>
    <string name="remove_photo">Remover foto</string>
    <string name="error_loading_trainings">Ocorreu um erro ao carregar os treinos</string>
    <string name="error_loading_exercises">Erro ao carregar os exercicios deste treino</string>
    <string name="error_upload_image">Não foi possível cadastrar o exercício, por favor tente novamente mais tarde</string>

</resources>