<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragment.EditTrainingFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color_toolbar"
        app:layout_constraintTop_toTopOf="parent" />


<RadioGroup
    android:id="@+id/radio_group"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@+id/toolbar"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:orientation="horizontal"
    android:gravity="center">


</RadioGroup>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_traing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/training"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="@id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_name_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        tools:text="Treino de Segunda-feira"
        android:layout_marginStart="@dimen/dimen_3"
        android:textStyle="italic"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_crieteOrEditTraining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_1"
        android:text="@string/create_training"
        android:textColor="@color/black"
        android:textSize="@dimen/text_h1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name_day" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_3"
        android:layout_marginTop="@dimen/dimen_1"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="@dimen/text_h2"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_crieteOrEditTraining" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_name_training"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_3"
        android:hint="@string/example"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_1"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="@dimen/text_h2"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/edt_name_training" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_description_training"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_3"
        android:gravity="top"
        android:hint="@string/example"
        android:minLines="5"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create_or_edit"
        style="@style/PrimaryButtonMaterial"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="@dimen/dimen_2"
        android:layout_marginTop="@dimen/dimen_3"
        android:text="@string/create_training"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_description_training" />

</androidx.constraintlayout.widget.ConstraintLayout>